--- a/model/Modelv1.ipynb
+++ b/model/Modelv1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_18836\\143445444.py:2: DtypeWarning: Columns (534,612,613,640,641,668,669,705,817,895,896,923,924,996,997,999,1000,1041,1042,1044,1045) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_21380\\1883255246.py:2: DtypeWarning: Columns (982,1128,1129,1180,1181,1232,1233,1297,1505,1651,1652,1703,1704,1800,1801,1803,1804,1845,1846,1848,1849) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('masterdata.csv')\n"
      ]
     }
@@ -37,6 +37,9 @@
    "source": [
     "# Load the dataset\n",
     "df = pd.read_csv('masterdata.csv')\n",
+    "\n",
+    "#Remove first 250 empty rows\n",
+    "df = df.tail(len(df)-255)\n",
     "\n",
     "# Convert 'game_date' column to datetime objects\n",
     "df['game_date'] = pd.to_datetime(df['game_date'])\n",
@@ -70,27 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 2304 candidates, totalling 11520 fits\n",
-      "Accuracy: 0.6043076923076923\n",
+      "Fitting 5 folds for each of 2592 candidates, totalling 12960 fits\n",
+      "Accuracy: 0.6347495244134432\n",
       "Confusion Matrix:\n",
-      " [[459 338]\n",
-      " [305 523]]\n",
+      " [[447 300]\n",
+      " [276 554]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.60      0.58      0.59       797\n",
-      "           1       0.61      0.63      0.62       828\n",
+      "           0       0.62      0.60      0.61       747\n",
+      "           1       0.65      0.67      0.66       830\n",
       "\n",
-      "    accuracy                           0.60      1625\n",
-      "   macro avg       0.60      0.60      0.60      1625\n",
-      "weighted avg       0.60      0.60      0.60      1625\n",
+      "    accuracy                           0.63      1577\n",
+      "   macro avg       0.63      0.63      0.63      1577\n",
+      "weighted avg       0.63      0.63      0.63      1577\n",
       "\n"
      ]
     }
@@ -105,18 +108,28 @@
     "])\n",
     "\n",
     "# Define a parameter grid for XGBoost\n",
-    "param_grid = {\n",
-    "    'model__n_estimators': [50, 100, 150, 200],\n",
-    "    'model__learning_rate': [0.01, 0.1, 0.2],\n",
-    "    'model__max_depth': [3, 5, 7, 9],\n",
+    "param_grid1 = {\n",
+    "    'model__n_estimators': [50, 100, 200],\n",
+    "    'model__learning_rate': [0.01, 0.1],\n",
+    "    'model__max_depth': [3, 5, 9],\n",
     "    'model__subsample': [0.8, 1.0],\n",
     "    'model__colsample_bytree': [0.8, 1.0],\n",
-    "    'model__gamma': [0, 0.1, 0.2],\n",
-    "    'model__min_child_weight': [1, 3, 5, 7]\n",
+    "    'model__gamma': [0, 0.1],\n",
+    "    'model__min_child_weight': [1, 3, 7]\n",
+    "}\n",
+    "\n",
+    "param_grid2 = {\n",
+    "    'model__n_estimators': [25, 75, 150, 250],\n",
+    "    'model__learning_rate': [0.05, 0.15],\n",
+    "    'model__max_depth': [6, 12, 15],\n",
+    "    'model__subsample': [0.25, 0.5, 0.9],\n",
+    "    'model__colsample_bytree': [0.2, 0.4, 0.6],\n",
+    "    'model__gamma': [0.05, 0.2, 0.3, 0.4],\n",
+    "    'model__min_child_weight': [4, 8, 12]\n",
     "}\n",
     "\n",
     "# Grid search for hyperparameter tuning\n",
-    "grid_search = GridSearchCV(pipeline, param_grid, cv=StratifiedKFold(n_splits=5), scoring='accuracy', n_jobs=-1, verbose=1)\n",
+    "grid_search = GridSearchCV(pipeline, param_grid1, cv=StratifiedKFold(n_splits=5), scoring='accuracy', n_jobs=-1, verbose=1)\n",
     "\n",
     "# Fit the model on the training data\n",
     "grid_search.fit(X_train, y_train)\n",
@@ -139,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1625 6500\n"
+      "1577 6304\n"
      ]
     }
    ],
@@ -156,9 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['xgb_model.pkl']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save the best model\n",
     "joblib.dump(best_model, 'xgb_model.pkl')"
