--- a/masterdata.ipynb
+++ b/masterdata.ipynb
@@ -25,13 +25,13 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "game_pks_path = 'game_pks.csv'\n",
-    "gamelogs_dir = 'gamelogs/'\n",
-    "output_path = 'model/unsorted_masterdata.csv'\n",
+    "game_pks_path = 'nba_REGULARSEASON_ONLY_game_pks.csv'\n",
+    "gamelogs_dir = 'nba_gamelogs/'\n",
+    "output_path = 'nba_model/unsorted_masterdata.csv'\n",
     "\n",
     "# Read the game_pks.csv file\n",
     "game_pks_df = pd.read_csv(game_pks_path)\n",
-    "game_pks_list = game_pks_df['game_id'].tolist()\n",
+    "game_pks_list = game_pks_df['GAME_ID'].tolist()\n",
     "\n",
     "# Initialize an empty list to store DataFrames\n",
     "dataframes = []\n",
@@ -41,7 +41,7 @@
     "\n",
     "# First pass: Collect all unique columns\n",
     "for game_pk in game_pks_list:\n",
-    "    file_path = os.path.join(gamelogs_dir, f'gamestats_{game_pk}.csv')\n",
+    "    file_path = os.path.join(gamelogs_dir, f'gameStats_{game_pk}.csv')\n",
     "    if os.path.exists(file_path):\n",
     "        df = pd.read_csv(file_path)\n",
     "        all_columns.update(df.columns)\n",
@@ -52,7 +52,7 @@
     "\n",
     "# Second pass: Read files and align columns\n",
     "for game_pk in game_pks_list:\n",
-    "    file_path = os.path.join(gamelogs_dir, f'gamestats_{game_pk}.csv')\n",
+    "    file_path = os.path.join(gamelogs_dir, f'gameStats_{game_pk}.csv')\n",
     "    if os.path.exists(file_path):\n",
     "        df = pd.read_csv(file_path)\n",
     "        # Add missing columns with default value of NaN (handled by reindex)\n",
