--- a/V4_game_pks.ipynb
+++ b/V4_game_pks.ipynb
@@ -2,58 +2,203 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
     "import pandas as pd\n",
-    "from pybaseball import statcast_batter, statcast_pitcher, playerid_lookup, pitching_stats_range, batting_stats_range, schedule_and_record, team_game_logs, pybaseball\n",
+    "from nba_api.stats.endpoints import leaguegamelog\n",
     "from datetime import timedelta, datetime\n",
-    "import statsapi\n",
-    "import pprint\n",
+    "import pprint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary to map team abbreviations to full team names\n",
+    "team_name_mapping = {\n",
+    "    \"ATL\": \"Atlanta Hawks\",\n",
+    "    \"BOS\": \"Boston Celtics\",\n",
+    "    \"BKN\": \"Brooklyn Nets\",\n",
+    "    \"CHA\": \"Charlotte Hornets\",\n",
+    "    \"CHI\": \"Chicago Bulls\",\n",
+    "    \"CLE\": \"Cleveland Cavaliers\",\n",
+    "    \"DAL\": \"Dallas Mavericks\",\n",
+    "    \"DEN\": \"Denver Nuggets\",\n",
+    "    \"DET\": \"Detroit Pistons\",\n",
+    "    \"GSW\": \"Golden State Warriors\",\n",
+    "    \"HOU\": \"Houston Rockets\",\n",
+    "    \"IND\": \"Indiana Pacers\",\n",
+    "    \"LAC\": \"Los Angeles Clippers\",\n",
+    "    \"LAL\": \"Los Angeles Lakers\",\n",
+    "    \"MEM\": \"Memphis Grizzlies\",\n",
+    "    \"MIA\": \"Miami Heat\",\n",
+    "    \"MIL\": \"Milwaukee Bucks\",\n",
+    "    \"MIN\": \"Minnesota Timberwolves\",\n",
+    "    \"NOP\": \"New Orleans Pelicans\",\n",
+    "    \"NYK\": \"New York Knicks\",\n",
+    "    \"OKC\": \"Oklahoma City Thunder\",\n",
+    "    \"ORL\": \"Orlando Magic\",\n",
+    "    \"PHI\": \"Philadelphia 76ers\",\n",
+    "    \"PHX\": \"Phoenix Suns\",\n",
+    "    \"POR\": \"Portland Trail Blazers\",\n",
+    "    \"SAC\": \"Sacramento Kings\",\n",
+    "    \"SAS\": \"San Antonio Spurs\",\n",
+    "    \"TOR\": \"Toronto Raptors\",\n",
+    "    \"UTA\": \"Utah Jazz\",\n",
+    "    \"WAS\": \"Washington Wizards\"\n",
+    "}\n",
+    "# Dictionary to map teams to team_ids\n",
+    "team_name_to_id_mapping = {\n",
+    "    \"Atlanta Hawks\": \"1610612737\",\n",
+    "    \"Boston Celtics\": \"1610612738\",\n",
+    "    \"Brooklyn Nets\": \"1610612751\",\n",
+    "    \"Charlotte Hornets\": \"1610612766\",\n",
+    "    \"Chicago Bulls\": \"1610612741\",\n",
+    "    \"Cleveland Cavaliers\": \"1610612739\",\n",
+    "    \"Dallas Mavericks\": \"1610612742\",\n",
+    "    \"Denver Nuggets\": \"1610612743\",\n",
+    "    \"Detroit Pistons\": \"1610612765\",\n",
+    "    \"Golden State Warriors\": \"1610612744\",\n",
+    "    \"Houston Rockets\": \"1610612745\",\n",
+    "    \"Indiana Pacers\": \"1610612754\",\n",
+    "    \"Los Angeles Clippers\": \"1610612746\",\n",
+    "    \"Los Angeles Lakers\": \"1610612747\",\n",
+    "    \"Memphis Grizzlies\": \"1610612763\",\n",
+    "    \"Miami Heat\": \"1610612748\",\n",
+    "    \"Milwaukee Bucks\": \"1610612749\",\n",
+    "    \"Minnesota Timberwolves\": \"1610612750\",\n",
+    "    \"New Orleans Pelicans\": \"1610612740\",\n",
+    "    \"New York Knicks\": \"1610612752\",\n",
+    "    \"Oklahoma City Thunder\": \"1610612760\",\n",
+    "    \"Orlando Magic\": \"1610612753\",\n",
+    "    \"Philadelphia 76ers\": \"1610612755\",\n",
+    "    \"Phoenix Suns\": \"1610612756\",\n",
+    "    \"Portland Trail Blazers\": \"1610612757\",\n",
+    "    \"Sacramento Kings\": \"1610612758\",\n",
+    "    \"San Antonio Spurs\": \"1610612759\",\n",
+    "    \"Toronto Raptors\": \"1610612761\",\n",
+    "    \"Utah Jazz\": \"1610612762\",\n",
+    "    \"Washington Wizards\": \"1610612764\"\n",
+    "}\n",
     "\n",
-    "today = datetime.now()\n",
-    "end_date = today.strftime('%Y-%m-%d')\n",
-    "end_date = '2024-05-24'\n",
+    "def get_season_schedule(season, start_date, end_date):\n",
+    "    # Fetch the season's game log data from the NBA API\n",
+    "    game_log = leaguegamelog.LeagueGameLog(season=season)\n",
+    "    schedule_df = game_log.get_data_frames()[0]\n",
     "\n",
-    "season = today.year\n",
+    "    # Convert dates to datetime objects for comparison\n",
+    "    schedule_df['GAME_DATE'] = pd.to_datetime(schedule_df['GAME_DATE'])\n",
+    "    start_date = pd.to_datetime(start_date)\n",
+    "    end_date = pd.to_datetime(end_date)\n",
     "\n",
-    "\n",
-    "def get_game_pks():\n",
+    "    # Filter the schedule based on the date range\n",
+    "    schedule_df = schedule_df[(schedule_df['GAME_DATE'] >= start_date) & (schedule_df['GAME_DATE'] <= end_date)]\n",
     "    \n",
-    "    desired_seasons = [2021, 2022, 2023, 2024] # Add Desired Seasons Here\n",
+    "    # Extract 'home_name', 'away_name', 'home_id', and 'away_id' from the 'MATCHUP' field\n",
+    "    def extract_teams(row):\n",
+    "        matchup = row['MATCHUP']\n",
+    "        home_team = ''\n",
+    "        away_team = ''\n",
+    "        \n",
+    "        if '@' in matchup:\n",
+    "            # Format like \"LAC @ LAL\"\n",
+    "            away_team, home_team = re.split(r'\\s*@\\s*', matchup)\n",
+    "        elif 'vs.' in matchup:\n",
+    "            # Format like \"GSW vs. SAC\"\n",
+    "            home_team, away_team = re.split(r'\\s*vs\\.\\s*', matchup)\n",
+    "        \n",
+    "        return pd.Series({\n",
+    "            'HOME_NAME': home_team,\n",
+    "            'AWAY_NAME': away_team\n",
+    "        })\n",
+    "    \n",
+    "    # Apply the function to the DataFrame and add the new columns\n",
+    "    teams_df = schedule_df.apply(extract_teams, axis=1)\n",
     "\n",
-    "    data_fields = ['game_date', 'game_id', 'away_name', 'away_id', 'home_name', 'home_id']\n",
+    "    # Merge the extracted data back into the original DataFrame\n",
+    "    schedule_df = pd.concat([schedule_df, teams_df], axis=1)\n",
     "\n",
-    "    ids_data = []\n",
+    "    # Drop unnecessary columns and keep only the required fields\n",
+    "    schedule_df = schedule_df[['SEASON_ID', 'GAME_DATE', 'GAME_ID', 'AWAY_NAME', 'HOME_NAME']]\n",
     "\n",
-    "    today = datetime.now().strftime('%Y-%m-%d')\n",
+    "    # Map the abbreviated team names to full names using the team_name_mapping dictionary\n",
+    "    schedule_df['AWAY_NAME'] = schedule_df['AWAY_NAME'].map(team_name_mapping)\n",
+    "    schedule_df['HOME_NAME'] = schedule_df['HOME_NAME'].map(team_name_mapping)\n",
     "\n",
+    "    # Map the full team names to team IDs using the team_name_to_id_mapping dictionary\n",
+    "    schedule_df['AWAY_ID'] = schedule_df['AWAY_NAME'].map(team_name_to_id_mapping)\n",
+    "    schedule_df['HOME_ID'] = schedule_df['HOME_NAME'].map(team_name_to_id_mapping)\n",
     "\n",
-    "    for year in desired_seasons:\n",
+    "    # Remove duplicate games based on GAME_ID\n",
+    "    schedule_df = schedule_df.drop_duplicates(subset='GAME_ID')\n",
     "\n",
-    "        if desired_seasons.index(year) < len(desired_seasons)-1:\n",
-    "            schedule = statsapi.schedule(start_date=f'{year}-01-01', end_date=f'{year}-12-31')\n",
+    "    return schedule_df\n",
     "\n",
-    "            for game in schedule:\n",
-    "                row = {field: game[field] for field in data_fields}\n",
-    "                ids_data.append(row)\n",
+    "#print(get_season_schedule('2023-24', '2023-11-01', '2023-12-31').head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching data for season 2020-21...\n",
+      "Fetching data for season 2021-22...\n",
+      "Fetching data for season 2022-23...\n",
+      "Fetching data for season 2023-24...\n",
+      "Data saved to nba_REGULARSEASON_ONLY_game_pks.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_game_pks(start_season, end_season, output_file):\n",
+    "    # Initialize an empty list to store DataFrames for each season\n",
+    "    all_seasons_data = []\n",
+    "    \n",
+    "    # Extract the start and end years from the season strings\n",
+    "    start_year = int(start_season[:4])\n",
+    "    end_year = int(end_season[:4])\n",
+    "    \n",
+    "    # Loop through seasons from start_season to end_season\n",
+    "    for year in range(start_year, end_year + 1):\n",
+    "        season = f\"{year}-{str(year+1)[-2:]}\"\n",
+    "        \n",
+    "        # Set the date range for each season\n",
+    "        start_date = f\"{year}-07-01\"  # Start from July 1st\n",
+    "        end_date = f\"{year+1}-06-30\"  # End on June 30th of the next year\n",
+    "        \n",
+    "        print(f\"Fetching data for season {season}...\")\n",
+    "        season_data = get_season_schedule(season, start_date, end_date)\n",
+    "        all_seasons_data.append(season_data)\n",
+    "    \n",
+    "    # Combine all seasons' data\n",
+    "    combined_data = pd.concat(all_seasons_data, ignore_index=True)\n",
+    "    \n",
+    "    # Sort the data by date\n",
+    "    combined_data = combined_data.sort_values('GAME_DATE')\n",
+    "    \n",
+    "    # Save to CSV\n",
+    "    combined_data.to_csv(output_file, index=False)\n",
+    "    print(f\"Data saved to {output_file}\")\n",
     "\n",
-    "            ids = pd.DataFrame(ids_data, columns=data_fields)\n",
-    "        else:\n",
-    "            schedule = statsapi.schedule(start_date=f'{year}-01-01', end_date=today)\n",
-    "\n",
-    "            for game in schedule:\n",
-    "                row = {field: game[field] for field in data_fields}\n",
-    "                ids_data.append(row)\n",
-    "\n",
-    "            ids = pd.DataFrame(ids_data, columns=data_fields)\n",
-    "\n",
-    "    ids.to_csv('game_pks.csv')\n",
-    "\n",
-    "get_game_pks() "
+    "get_game_pks('2020-21', '2023-24', 'nba_REGULARSEASON_ONLY_game_pks.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run the one below when the 2024-25 season starts "
    ]
   },
   {
@@ -61,7 +206,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_game_pks(start_season, output_file):\n",
+    "    # Get the current date\n",
+    "    current_date = datetime.now().strftime('%Y-%m-%d')\n",
+    "    \n",
+    "    # Initialize an empty list to store DataFrames for each season\n",
+    "    all_seasons_data = []\n",
+    "    \n",
+    "    # Loop through seasons from start_season to the current season\n",
+    "    current_year = datetime.now().year\n",
+    "    for year in range(int(start_season[:4]), current_year + 1):\n",
+    "        season = f\"{year}-{str(year+1)[-2:]}\"\n",
+    "        \n",
+    "        # For the first season, use the provided start_season\n",
+    "        if season == start_season:\n",
+    "            start_date = f\"{year}-10-01\"  # Assuming the NBA season typically starts in October\n",
+    "        else:\n",
+    "            start_date = f\"{year}-07-01\"  # Start from July 1st for subsequent seasons\n",
+    "        \n",
+    "        # For the current season, use the current date as the end date\n",
+    "        if year == current_year:\n",
+    "            end_date = current_date\n",
+    "        else:\n",
+    "            end_date = f\"{year+1}-06-30\"  # End on June 30th for completed seasons\n",
+    "        \n",
+    "        print(f\"Fetching data for season {season}...\")\n",
+    "        season_data = get_season_schedule(season, start_date, end_date)\n",
+    "        all_seasons_data.append(season_data)\n",
+    "    \n",
+    "    # Combine all seasons' data\n",
+    "    combined_data = pd.concat(all_seasons_data, ignore_index=True)\n",
+    "    \n",
+    "    # Sort the data by date\n",
+    "    combined_data = combined_data.sort_values('GAME_DATE')\n",
+    "    \n",
+    "    # Save to CSV\n",
+    "    combined_data.to_csv(output_file, index=False)\n",
+    "    print(f\"Data saved to {output_file}\")\n",
+    "\n",
+    "get_game_pks('2020-21', 'nba_game_pks.csv')"
+   ]
   }
  ],
  "metadata": {
@@ -80,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
