--- a/oddsdata.ipynb
+++ b/oddsdata.ipynb
@@ -2,200 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated gamelogs/game_746437.csv with over/under runline.\n",
-      "1\n",
-      "Updated gamelogs/game_745950.csv with over/under runline.\n",
-      "2\n",
-      "Updated gamelogs/game_745298.csv with over/under runline.\n",
-      "3\n",
-      "Updated gamelogs/game_747002.csv with over/under runline.\n",
-      "4\n",
-      "Updated gamelogs/game_745545.csv with over/under runline.\n",
-      "5\n",
-      "Updated gamelogs/game_744980.csv with over/under runline.\n",
-      "6\n",
-      "Updated gamelogs/game_746843.csv with over/under runline.\n",
-      "7\n",
-      "Updated gamelogs/game_746674.csv with over/under runline.\n",
-      "8\n",
-      "Updated gamelogs/game_745462.csv with over/under runline.\n",
-      "9\n",
-      "Updated gamelogs/game_745542.csv with over/under runline.\n",
-      "10\n",
-      "Updated gamelogs/game_746438.csv with over/under runline.\n",
-      "11\n",
-      "Updated gamelogs/game_745054.csv with over/under runline.\n",
-      "12\n",
-      "Updated gamelogs/game_747001.csv with over/under runline.\n",
-      "13\n",
-      "Updated gamelogs/game_745784.csv with over/under runline.\n",
-      "14\n",
-      "Updated gamelogs/game_744974.csv with over/under runline.\n",
-      "15\n",
-      "Updated gamelogs/game_746357.csv with over/under runline.\n",
-      "16\n",
-      "Updated gamelogs/game_745949.csv with over/under runline.\n",
-      "17\n",
-      "Updated gamelogs/game_745144.csv with over/under runline.\n",
-      "18\n",
-      "Updated gamelogs/game_746518.csv with over/under runline.\n",
-      "19\n",
-      "Updated gamelogs/game_746189.csv with over/under runline.\n",
-      "20\n",
-      "Updated gamelogs/game_745463.csv with over/under runline.\n",
-      "21\n",
-      "Updated gamelogs/game_746434.csv with over/under runline.\n",
-      "22\n",
-      "Updated gamelogs/game_746841.csv with over/under runline.\n",
-      "23\n",
-      "Updated gamelogs/game_745049.csv with over/under runline.\n",
-      "24\n",
-      "Updated gamelogs/game_745785.csv with over/under runline.\n",
-      "25\n",
-      "Updated gamelogs/game_745537.csv with over/under runline.\n",
-      "26\n",
-      "Updated gamelogs/game_746675.csv with over/under runline.\n",
-      "27\n",
-      "Updated gamelogs/game_746997.csv with over/under runline.\n",
-      "28\n",
-      "Updated gamelogs/game_744977.csv with over/under runline.\n",
-      "29\n",
-      "Updated gamelogs/game_745626.csv with over/under runline.\n",
-      "30\n",
-      "Updated gamelogs/game_746355.csv with over/under runline.\n",
-      "31\n",
-      "Updated gamelogs/game_745140.csv with over/under runline.\n",
-      "32\n",
-      "Updated gamelogs/game_745952.csv with over/under runline.\n",
-      "33\n",
-      "Updated gamelogs/game_746515.csv with over/under runline.\n",
-      "34\n",
-      "Updated gamelogs/game_746190.csv with over/under runline.\n",
-      "35\n",
-      "Updated gamelogs/game_745786.csv with over/under runline.\n",
-      "36\n",
-      "Updated gamelogs/game_746999.csv with over/under runline.\n",
-      "37\n",
-      "Updated gamelogs/game_745464.csv with over/under runline.\n",
-      "38\n",
-      "Updated gamelogs/game_745539.csv with over/under runline.\n",
-      "39\n",
-      "Updated gamelogs/game_746676.csv with over/under runline.\n",
-      "40\n",
-      "Updated gamelogs/game_745051.csv with over/under runline.\n",
-      "41\n",
-      "Updated gamelogs/game_746359.csv with over/under runline.\n",
-      "42\n",
-      "Updated gamelogs/game_745948.csv with over/under runline.\n",
-      "43\n",
-      "Updated gamelogs/game_745139.csv with over/under runline.\n",
-      "44\n",
-      "Updated gamelogs/game_746838.csv with over/under runline.\n",
-      "45\n",
-      "Updated gamelogs/game_744975.csv with over/under runline.\n",
-      "46\n",
-      "Updated gamelogs/game_746516.csv with over/under runline.\n",
-      "47\n",
-      "Updated gamelogs/game_745621.csv with over/under runline.\n",
-      "48\n",
-      "Updated gamelogs/game_746186.csv with over/under runline.\n",
-      "49\n",
-      "Updated gamelogs/game_746431.csv with over/under runline.\n",
-      "50\n",
-      "\n",
-      "Games with duplicate dates:\n"
+      "Updated nba_gamelogs/game_0022000002.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000001.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000012.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000018.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000019.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000003.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000020.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000013.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000014.csv with over/under points\n",
+      "Updated nba_gamelogs/game_0022000010.csv with over/under points\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "from datetime import datetime\n",
     "\n",
-    "def fetch_over_under_runline(oddshark_id, game_date):\n",
-    "    year = game_date.year\n",
-    "    url = f\"https://www.oddsshark.com/stats/gamelog/baseball/mlb/{oddshark_id}?season={year}\"\n",
+    "# Mapping of NBA team IDs to Oddshark IDs\n",
+    "team_to_oddshark_id = {\n",
+    "    \"1610612737\": \"20734\", # Atlanta Hawks\n",
+    "    \"1610612738\": \"20722\", # Boston Celtics\n",
+    "    \"1610612751\": \"20749\", # Brooklyn Nets\n",
+    "    \"1610612766\": \"20751\", # Charlotte Hornets\n",
+    "    \"1610612741\": \"20732\", # Chicago Bulls\n",
+    "    \"1610612739\": \"20735\", # Cleveland Cavaliers\n",
+    "    \"1610612742\": \"20727\", # Dallas Mavericks\n",
+    "    \"1610612743\": \"20723\", # Denver Nuggets\n",
+    "    \"1610612765\": \"20743\", # Detroit Pistons\n",
+    "    \"1610612744\": \"20741\", # Golden State Warriors\n",
+    "    \"1610612745\": \"20740\", # Houston Rockets\n",
+    "    \"1610612754\": \"20737\", # Indiana Pacers\n",
+    "    \"1610612746\": \"20736\", # LA Clippers\n",
+    "    \"1610612747\": \"20739\", # Los Angeles Lakers\n",
+    "    \"1610612763\": \"20729\", # Memphis Grizzlies\n",
+    "    \"1610612748\": \"20726\", # Miami Heat\n",
+    "    \"1610612749\": \"20725\", # Milwaukee Bucks\n",
+    "    \"1610612750\": \"20744\", # Minnesota Timberwolves\n",
+    "    \"1610612740\": \"20733\", # New Orleans Pelicans\n",
+    "    \"1610612752\": \"20747\", # New York Knicks\n",
+    "    \"1610612760\": \"20728\", # Oklahoma City Thunder\n",
+    "    \"1610612753\": \"20750\", # Orlando Magic\n",
+    "    \"1610612755\": \"20731\", # Philadelphia 76ers\n",
+    "    \"1610612756\": \"20730\", # Phoenix Suns\n",
+    "    \"1610612757\": \"20748\", # Portland Trail Blazers\n",
+    "    \"1610612758\": \"20745\", # Sacramento Kings\n",
+    "    \"1610612759\": \"20724\", # San Antonio Spurs\n",
+    "    \"1610612761\": \"20742\", # Toronto Raptors\n",
+    "    \"1610612762\": \"20738\", # Utah Jazz\n",
+    "    \"1610612764\": \"20746\"  # Washington Wizards\n",
+    "}\n",
+    "\n",
+    "def fetch_over_under_points(oddshark_id, season_id, game_date):\n",
+    "    year = int(season_id[1:]) + 1\n",
+    "    year = str(year)\n",
+    "    url = f\"https://www.oddsshark.com/stats/gamelog/basketball/nba/{oddshark_id}?season={year}\"\n",
     "    \n",
     "    try:\n",
     "        tables = pd.read_html(url)\n",
     "        df = tables[0]\n",
     "    except Exception as e:\n",
     "        print(f\"BAD - error for team {oddshark_id} on date {game_date}: {e}\")\n",
-    "        return 'unknown', None, None, None\n",
+    "        return None\n",
     "    \n",
     "    if df.empty:\n",
     "        print(f\"BAD - No data in table for team {oddshark_id} on date {game_date}\")\n",
-    "        return 'unknown', None, None, None\n",
+    "        return None\n",
     "    \n",
     "    df['Date'] = pd.to_datetime(df['Date'], format='%b %d, %Y')\n",
     "    matching_rows = df[df['Date'] == game_date]\n",
-    "\n",
-    "    if len(matching_rows) > 1:\n",
-    "        print(f\"DOUBLEHEADER on {game_date}\")\n",
-    "        return '', oddshark_id, year, game_date\n",
     "    \n",
     "    if matching_rows.empty:\n",
     "        print(f\"BAD - No matching date found for team {oddshark_id} on date {game_date}\")\n",
-    "        return 'unknown', None, None, None\n",
+    "        return None\n",
     "    \n",
     "    over_under = matching_rows.iloc[0]['Total']\n",
-    "    return over_under, None, None, None\n",
+    "    return over_under\n",
     "\n",
     "def update_gamelogs_with_over_under(game_pks_file, gamelogs_folder):\n",
-    "    game_pks_df = pd.read_csv(game_pks_file)\n",
-    "    game_pks = game_pks_df['game_id'].tail(50)  # Set the number of recent games to do (standard = 50)\n",
-    "    duplicates = []\n",
+    "    # Load all the games from the file\n",
+    "    game_data = pd.read_csv(game_pks_file, dtype=str)\n",
+    "    game_data = game_data.head(10) # Modify the number here to change the amount of files to update\n",
     "    \n",
-    "    count = 0\n",
-    "    for game_id in game_pks:\n",
-    "        try:\n",
-    "            gamelog_file = f'{gamelogs_folder}/game_{game_id}.csv'\n",
-    "            gamelog_df = pd.read_csv(gamelog_file)\n",
-    "            \n",
-    "            home_oddshark_id = gamelog_df.loc[0, 'home_oddshark_id']\n",
-    "            game_date_str = gamelog_df.loc[0, 'game_date']\n",
-    "            game_date = datetime.strptime(game_date_str, '%Y-%m-%d')\n",
-    "            \n",
-    "            over_under_runline, duplicate_id, duplicate_year, duplicate_date = fetch_over_under_runline(home_oddshark_id, game_date)\n",
-    "            \n",
-    "            if duplicate_id:\n",
-    "                duplicates.append((duplicate_id, duplicate_year, duplicate_date))\n",
-    "                \n",
-    "            gamelog_df['over_under_runline'] = over_under_runline\n",
-    "             \n",
-    "            gamelog_df.to_csv(gamelog_file, index=False)\n",
-    "            print(f\"Updated {gamelog_file} with over/under runline.\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error updating gamelog for game_id {game_id}: {e}\")\n",
+    "    # Iterate over the games\n",
+    "    for _, row in game_data.iterrows():\n",
+    "        game_id = row['GAME_ID']\n",
+    "        game_date = pd.to_datetime(row['GAME_DATE'])\n",
+    "        home_team_id = row['HOME_ID']\n",
+    "        season_id = row['SEASON_ID']\n",
+    "        \n",
+    "        # Get the corresponding Oddshark team IDs\n",
+    "        home_oddshark_id = team_to_oddshark_id.get(home_team_id)\n",
     "\n",
-    "        count+=1\n",
-    "        if count % 100:\n",
-    "            print(count)\n",
-    "    \n",
-    "    print(\"\\nGames with duplicate dates:\")\n",
-    "    for dup in duplicates:\n",
-    "        print(f\"Team Oddshark ID: {dup[0]}, Year: {dup[1]}, Date: {dup[2].strftime('%Y-%m-%d')}\")\n",
+    "        # Fetch over/under points for both teams\n",
+    "        home_over_under = fetch_over_under_points(home_oddshark_id, season_id, game_date)\n",
+    "\n",
+    "        # Read the game log CSV\n",
+    "        game_file = os.path.join(gamelogs_folder, f'game_{game_id}.csv')\n",
+    "        if os.path.exists(game_file):\n",
+    "            game_df = pd.read_csv(game_file)\n",
+    "\n",
+    "            # Add new columns for over/under points\n",
+    "            game_df['Over_Under_Total'] = home_over_under\n",
+    "\n",
+    "            # Save the updated game log back to the CSV\n",
+    "            game_df.to_csv(game_file, index=False)\n",
+    "            print(f\"Updated {game_file} with over/under points\")\n",
+    "        else:\n",
+    "            print(f\"Game file {game_file} does not exist.\")\n",
     "\n",
     "# Update the paths as necessary\n",
-    "game_pks_file = 'game_pks.csv'\n",
-    "gamelogs_folder = 'gamelogs'\n",
+    "game_pks_file = 'nba_REGULARSEASON_ONLY_game_pks.csv'\n",
+    "gamelogs_folder = 'nba_gamelogs'\n",
     "\n",
     "# Run the update function\n",
     "update_gamelogs_with_over_under(game_pks_file, gamelogs_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -214,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
