--- a/v4_and_v5/V4_gamelogs2.ipynb
+++ b/v4_and_v5/V4_gamelogs2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,16 +21,8 @@
       "90\n",
       "100\n",
       "Errors encountered:\n",
-      "(746838, 'Error getting home runs')\n",
-      "(746838, 'Error getting away runs')\n",
-      "(746516, 'Error getting home runs')\n",
-      "(746516, 'Error getting away runs')\n",
-      "(745621, 'Error getting home runs')\n",
-      "(745621, 'Error getting away runs')\n",
-      "(746186, 'Error getting home runs')\n",
-      "(746186, 'Error getting away runs')\n",
-      "(746431, 'Error getting home runs')\n",
-      "(746431, 'Error getting away runs')\n"
+      "(746577, 'Error getting home runs')\n",
+      "(746577, 'Error getting away runs')\n"
      ]
     }
    ],
@@ -262,7 +254,7 @@
     "    save_game_to_csv(gamepk)\n",
     "    count += 1\n",
     "    if count % 10 == 0:\n",
-    "        print(count)\n",
+    "        print(f\"{count} games processed.\")\n",
     "\n",
     "# Print collected errors\n",
     "if errors:\n",
@@ -283,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MLBpy",
+   "display_name": "mlb",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
