live odds scraper added (8-scrape-odds) and model predictions (9-predict) outputted to csv file for web app

--- a/v4_and_v5/V5_predict.ipynb
+++ b/v4_and_v5/V5_predict.ipynb
@@ -9,25 +9,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No games found for today.\n"
+      "Game 96: Under the runline\n",
+      "Game 97: Over the runline\n",
+      "Game 98: Over the runline\n",
+      "Game 99: Over the runline\n",
+      "Game 100: Under the runline\n",
+      "Game 101: Over the runline\n",
+      "Predictions saved to mlb-app/src/app/api/picks/file_location/2025-02-21.csv\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'xgb_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     xgb_model \u001b[38;5;241m=\u001b[39m joblib\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel/xgb_model.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Make predictions\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mxgb_model\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(X_todays_games)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Interpret and display the predictions\u001b[39;00m\n\u001b[0;32m     40\u001b[0m todays_games[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprediction\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m predictions\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'xgb_model' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/5h/v8qm6jqd52q00q39r0ym2qhw0000gn/T/ipykernel_95205/1706453164.py:39: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  todays_games['prediction'] = predictions\n",
+      "/var/folders/5h/v8qm6jqd52q00q39r0ym2qhw0000gn/T/ipykernel_95205/1706453164.py:49: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  todays_games['pick'] = todays_games['prediction'].map({1: 'Over', 0: 'Under'})\n"
      ]
     }
    ],
@@ -38,14 +51,13 @@
     "import xgboost as xgb\n",
     "\n",
     "# Load the dataset\n",
-    "df = pd.read_csv('model/currentdata.csv')\n",
+    "df = pd.read_csv('../model/currentdata.csv')\n",
     "\n",
     "# Convert 'game_date' column to datetime objects\n",
     "df['game_date'] = pd.to_datetime(df['game_date'])\n",
     "\n",
     "# Change the 'push' games to equal 1.\n",
     "df.loc[df['over_under_runline'] == df['runs_total'], 'over_under_target'] = 1\n",
-    "\n",
     "\n",
     "# Get today's date\n",
     "today = datetime.today().strftime('%Y-%m-%d')\n",
@@ -65,7 +77,7 @@
     "    X_todays_games = todays_games.drop(columns=columns_to_drop)\n",
     "\n",
     "    # Load the trained model (assuming it's saved as 'model.pkl')\n",
-    "    xgb_model = joblib.load('model/xgb_model.pkl')\n",
+    "    xgb_model = joblib.load('xgb_model.pkl')\n",
     "\n",
     "# Make predictions\n",
     "predictions = xgb_model.predict(X_todays_games)\n",
@@ -74,7 +86,32 @@
     "todays_games['prediction'] = predictions\n",
     "for i, row in todays_games.iterrows():\n",
     "    result = 'Over' if row['prediction'] == 1 else 'Under'\n",
-    "    print(f\"Game {i + 2}: {result} the runline\")"
+    "    print(f\"Game {i + 2}: {result} the runline\")\n",
+    "\n",
+    "# ---------- CREATE CSV -----------\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "# Map predictions to \"Over\" or \"Under\"\n",
+    "todays_games['pick'] = todays_games['prediction'].map({1: 'Over', 0: 'Under'})\n",
+    "\n",
+    "# Create the output DataFrame\n",
+    "output_df = todays_games[['game_id', 'home_name', 'away_name', 'over_under_runline', 'pick']].copy()\n",
+    "\n",
+    "# Rename columns to match required format\n",
+    "output_df.columns = ['game_id', 'home_team', 'away_team', 'runline', 'pick']\n",
+    "\n",
+    "# Define the file path\n",
+    "output_dir = 'mlb-app/src/app/api/picks/file_location'\n",
+    "os.makedirs(output_dir, exist_ok=True)  # Ensure the directory exists\n",
+    "\n",
+    "# Define the filename with today's date\n",
+    "output_file = os.path.join(output_dir, f\"{today}.csv\")\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_df.to_csv(output_file, index=False)\n",
+    "\n",
+    "print(f\"Predictions saved to {output_file}\")\n"
    ]
   },
   {
@@ -87,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MLBpy",
+   "display_name": "mlb",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
