--- a/v4_and_v5/V4_game_pks.ipynb
+++ b/v4_and_v5/V4_game_pks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
     "\n",
     "today = datetime.now()\n",
     "end_date = today.strftime('%Y-%m-%d')\n",
-    "end_date = '2024-05-24'\n",
+    "\n",
     "\n",
     "season = today.year\n",
     "\n",
     "\n",
     "def get_game_pks():\n",
     "    \n",
-    "    desired_seasons = [2021, 2022, 2023, 2024] # Add Desired Seasons Here\n",
+    "    desired_seasons = [2021, 2022, 2023, 2024, 2025] # Add Desired Seasons Here\n",
     "\n",
     "    data_fields = ['game_date', 'game_id', 'away_name', 'away_id', 'home_name', 'home_id']\n",
     "\n",
@@ -66,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MLBpy",
+   "display_name": "mlb",
    "language": "python",
    "name": "python3"
   },
